<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.notifications.NotificationsFragment">

    <ImageView
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/shopping">

    </ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textColor="@color/black"
        android:textSize="40dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="15dp">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emt_text1"
        android:textColor="@color/gary"
        android:textSize="22dp"
        android:gravity="center"
        android:layout_marginTop="25dp">

    </TextView>


    <TextView
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_margin="50dp"
        android:text="@string/shopp"
        android:textSize="20dp"
        android:background="@drawable/bback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>