<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cho"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="35dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text2"
        android:textColor="@color/gary"
        android:gravity="center"
        android:textSize="25dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_weight="1"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_margin="20dp"
            android:text="@string/done"
            android:background="@drawable/bbackwhite"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/ic_baseline_sentiment_satisfied_alt_24dot"
            android:layout_height="50dp"/>

        <TextView
            android:layout_weight="1"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_margin="20dp"
            android:text="@string/done"
            android:background="@drawable/bbackwhite"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/ic_baseline_sentiment_satisfied_alt_24dot"
            android:layout_height="50dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_weight="1"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_margin="20dp"
            android:text="@string/done"
            android:background="@drawable/bbackwhite"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/ic_baseline_sentiment_satisfied_alt_24dot"
            android:layout_height="50dp"/>

        <TextView
            android:layout_weight="1"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_margin="20dp"
            android:text="@string/done"
            android:background="@drawable/bbackwhite"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/ic_baseline_sentiment_satisfied_alt_24dot"
            android:layout_height="50dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_weight="1"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_margin="20dp"
            android:text="@string/done"
            android:background="@drawable/bbackwhite"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/ic_baseline_sentiment_satisfied_alt_24dot"
            android:layout_height="50dp"/>

        <TextView
            android:layout_weight="1"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_margin="20dp"
            android:text="@string/done"
            android:background="@drawable/bbackwhite"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/ic_baseline_sentiment_satisfied_alt_24dot"
            android:layout_height="50dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_weight="1"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_margin="20dp"
            android:text="@string/done"
            android:background="@drawable/bbackwhite"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/ic_baseline_sentiment_satisfied_alt_24dot"
            android:layout_height="50dp"/>

        <TextView
            android:layout_weight="1"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_margin="20dp"
            android:text="@string/done"
            android:background="@drawable/bbackwhite"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/ic_baseline_sentiment_satisfied_alt_24dot"
            android:layout_height="50dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_weight="1"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_margin="20dp"
            android:text="@string/done"
            android:background="@drawable/bbackwhite"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/ic_baseline_sentiment_satisfied_alt_24dot"
            android:layout_height="50dp"/>

        <TextView
            android:layout_weight="1"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_margin="20dp"
            android:text="@string/done"
            android:background="@drawable/bbackwhite"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/ic_baseline_sentiment_satisfied_alt_24dot"
            android:layout_height="50dp"/>

    </LinearLayout>

</LinearLayout>